whoa adding buttons to a product page that trigger an overlay with a form inside. Going to be some bug squashing on this one in a few days

--- a/assets/scss/site/_elements.scss
+++ b/assets/scss/site/_elements.scss
@@ -497,13 +497,18 @@ table.product-ref-table{
     margin: 0 15%;
     width:70%;
     opacity:.75;
-    transition:opacity 300ms;
+    transition:all 300ms;
+    border:none;
+    box-shadow: 0 0 15px 3px $base;
+    color:$black;
      @media screen and (max-width:$medium-breakpoint){
       margin: 0 5%;
       width: 90%;
+      box-shadow: 0 0 5px 0 $base;
     }
     &:hover{
       opacity:1;
+      box-shadow: 0 0 5px 0 $base;
     }
 }
 
